--- a/App/views/layout.phtml
+++ b/App/views/layout.phtml
@@ -27,28 +27,64 @@
 	</nav>
 	
 	<nav class="navbar fixed-bottom navbar-dark bg-dark">
-</nav>
+  </nav>
   <!--messages-->
-  <?php if(isset($this->view->result)) :?>
-    <?php if ($this->view->result == 'ADD_OK'):?>
-      <div class="alert alert-success" role="alert">
-        Animal cadastrado com sucesso!
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-         </button>
-      </div>
-      <?php elseif ($this->view->result == 'ADD_ERROR'):?>
-      <div class="alert alert-danger" role="alert">
-        Erro ao cadastrar animal!
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-         </button>
-      </div>
-      <?php endif?>
-  <?php endif?>
+<!--messages-->
+<?php if(isset($this->view->result)) :?>
+		<?php if($this->view->result == 'ADD_OK') :?>
+			<div class="alert alert-success" role="alert">
+			    Cadastro adicionado com sucesso!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		<?php elseif($this->view->result == 'ADD_ERROR') :?>
+			<div class="alert alert-danger" role="alert">
+			    Erro ao adicionar cadastro!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		<?php elseif($this->view->result == 'EDIT_OK') :?>
+			<div class="alert alert-success" role="alert">
+			    Cadastro atualizado com sucesso!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		<?php elseif($this->view->result == 'EDIT_ERROR') :?>
+			<div class="alert alert-danger" role="alert">
+			    Erro ao editar cadastro!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+      <?php elseif($this->view->result == 'DELETE_OK') :?>
+			<div class="alert alert-success" role="alert">
+			    Cadastro deletado!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		<?php elseif($this->view->result == 'DELETE_ERROR') :?>
+			<div class="alert alert-danger" role="alert">
+			    Erro ao deletar cadastro!
+			    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		<?php endif?>
+	<?php endif?>
 	<?=$this->content()?>
+
+
+
+
 </body>
+
+
 <footer>
+
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
